--- a/Module 11/connect-four/connect4.css
+++ b/Module 11/connect-four/connect4.css
@@ -13,10 +13,16 @@
   margin: 5px;
   width: 80%;
   height: 80%;
+  border-radius: 50%;
+}
+  
+.piece.p1{
+  background-color: red;
 }
 
-/* TODO: make pieces red/blue,  depending on player 1/2 piece */
-
+.piece.p2{
+ background-color: blue;
+}
 /* column-top is table row of clickable areas for each column */
 
 #column-top td {
